# phonetic_segmentation_alignment

./: Dockerfile  README.md  align.sh  docker-compose.yml  mfa.sh  pyproject.toml  reindexing.sh  run.sh  split.sh
phonetic_segmentation_alignment/: concat.py  playground.py  split.py
