[tool.poetry]
name = "phonetic-segmentation-alignment"
version = "0.1.0"
description = ""
authors = ["Christoph Baldow <christoph.baldow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tgt = "^1.4.4"
pydub = "^0.25.1"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
split_input_files = "phonetic_segmentation_alignment.split:split"
concat_mfa_files = "phonetic_segmentation_alignment.concat:concat"
